--- a/less/variables.less
+++ b/less/variables.less
@@ -1,11 +1,11 @@
 //Variables
 
 // Color pointers
-@header-font-color: @cyan;
+@header-font-color: @gold;
 @main-font-color: @darkcyan;
 @main-border-color: @lightgrayishblue;
 @border-color: @darkcyan;
-@background-color: @verydarkcyan;
+@background-color: @lighttan;
 @font-color: @verydarkblue;
 
 
@@ -13,6 +13,6 @@
 // Color Vars
 @lightgrayishblue: #deeef4;
 @darkcyan: #508991;
-@cyan: #07b5b5;
+@gold: #f9b514;
 @verydarkblue: #172a3a;
-@verydarkcyan: #004346;
+@lighttan: #d2b48c;
