--- a/css/index.css
+++ b/css/index.css
@@ -217,7 +217,7 @@ body .container .head .top-content .intro-content .contact-us {
   border: 3px solid #508991;
   border-radius: 18%;
 }
-body .container .head .top-content .intro-content .title-text {
+body .container .head .top-content .title-text {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -233,7 +233,6 @@ body .container .about-us {
   width: 70%;
   margin: 5% 15% 0;
   background-color: #d2b48c;
-  border: solid;
   width: 100%;
   margin: 0;
 }
@@ -248,10 +247,19 @@ body .container .about-us p {
   text-align: center;
 }
 body .container .images {
-  background-color: blue;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0;
   display: flex;
   justify-content: space-around;
   margin-top: 5%;
+}
+body .container .images h2 {
+  margin: 10px;
+}
+body .container .images .middle-bgImages {
+  border: 3px solid darkblue;
 }
 @media (max-width: 500px) {
   body .container .images {
@@ -259,56 +267,54 @@ body .container .images {
     flex-direction: column;
   }
 }
-body .container .images .middle-images {
-  background-color: red;
+body .container .images .images-layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+  margin: 0;
+}
+body .container .images .images-layout .middle-images {
+  background-color: #FF5733;
   display: flex;
   align-content: center;
   flex-direction: column;
-  width: 200px;
+  width: 100%;
   text-align: center;
-  background-color: lightblue;
+  margin: 1%;
+  padding: 1% 3% 10%;
+  border: solid tan;
 }
 @media (max-width: 500px) {
-  body .container .images .middle-images {
+  body .container .images .images-layout .middle-images {
     width: 150px;
     align-items: center;
     margin-bottom: 10px;
   }
 }
-body .container .images .middle-images .image1 {
-  width: 100%;
-  height: 50%;
-}
-@media (max-width: 500px) {
-  body .container .images .middle-images .image1 {
-    width: 60%;
-  }
-}
-body .container .images .middle-images .image2 {
-  width: 100%;
-}
-@media (max-width: 500px) {
-  body .container .images .middle-images .image2 {
-    width: 60%;
-  }
-}
-body .container .images h3 {
+body .container .images .images-layout .middle-images h3 {
   margin: 5% 0;
 }
 @media (max-width: 500px) {
-  body .container .images p {
+  body .container .images .images-layout .middle-images p {
     margin-bottom: 10%;
   }
 }
 body .container .bottom-content {
-  background-color: green;
+  background-color: #d2b48c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
 }
 body .container .bottom-content a {
   text-decoration: none;
   width: 500px;
 }
 body .container .bottom-content h2 {
-  padding: 5%;
+  padding: 2%;
 }
 body .container footer {
   background-color: gray;
@@ -329,4 +335,160 @@ body .container footer nav a {
   text-decoration: none;
   color: #d2b48c;
   padding: 5px;
+}
+body {
+  background-color: #f9b514;
+}
+body .navigation {
+  display: flex;
+  justify-content: space-between;
+}
+body .navigation .name-logo {
+  width: 400px;
+}
+@media (max-width: 500px) {
+  body .navigation .name-logo {
+    width: 300px;
+  }
+}
+body .navigation a {
+  text-decoration: none;
+  color: #d2b48c;
+}
+body .navigation .about {
+  display: flex;
+  justify-content: flex-end;
+  height: 30px;
+  font-size: 1.8rem;
+  text-decoration: none;
+}
+body .navigation .about a {
+  padding: 5px;
+}
+body .main-content {
+  padding-top: 5%;
+  display: flex;
+  flex-direction: column;
+}
+body .main-content img {
+  margin: 3%;
+  width: 250px;
+}
+body .main-content p {
+  margin-bottom: 5%;
+}
+body .main-content .topmember {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+body .main-content .topmember .members-pl {
+  width: 50%;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  body .main-content .topmember .members-pl h1 {
+    color: #508991;
+  }
+}
+body .main-content .topmember .members-pl p {
+  margin-top: 2%;
+}
+body .main-content .secondmembers {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+  height: 700px;
+}
+body .main-content .secondmembers h1 {
+  width: 100%;
+}
+@media (max-width: 500px) {
+  body .main-content .secondmembers h1 {
+    color: #508991;
+  }
+}
+body .main-content .members-wrII {
+  width: 47%;
+  height: 500px;
+  justify-content: center;
+}
+body .main-content .members-wrII p {
+  margin-top: 2%;
+}
+@media (max-width: 500px) {
+  body .main-content .members-wrII p {
+    margin-top: 5%;
+    height: 280px;
+  }
+}
+body .thirdmembers {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+  height: 700px;
+}
+body .thirdmembers h1 {
+  width: 100%;
+}
+@media (max-width: 500px) {
+  body .thirdmembers h1 {
+    color: #508991;
+    margin-top: 5%;
+  }
+}
+body .thirdmembers .members-wrI {
+  width: 47%;
+  height: 500px;
+  justify-content: center;
+}
+body .thirdmembers .members-wrI p {
+  margin-top: 2%;
+  width: 95%;
+}
+body .bottommembers {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+  height: 700px;
+}
+body .bottommembers h1 {
+  width: 100%;
+}
+@media (max-width: 500px) {
+  body .bottommembers h1 {
+    color: #508991;
+    margin-top: 20%;
+  }
+}
+body .bottommembers .members-web {
+  width: 47%;
+  height: 500px;
+  justify-content: center;
+}
+body .bottommembers .members-web p {
+  margin-top: 2%;
+  width: 95%;
+}
+footer {
+  display: flex;
+  justify-content: center;
+}
+footer a {
+  font-size: 1.6rem;
+  padding: 15px;
+  text-decoration: none;
+  color: #d2b48c;
+}
+@media (max-width: 500px) {
+  footer a {
+    font-size: 1.2rem;
+  }
 }
