--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,16 +13,10 @@
     margin: 5% 15% 0;
 }
 
-.image-alignment {
-    display: flex;
-    justify-content: space-around;
-    }
-
-
 .footer-alignment {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     height: 50px;
     width: 70%;
+    padding: 0 2%;
 }
