--- a/less/variables.less
+++ b/less/variables.less
@@ -1,18 +1,14 @@
 //Variables
 
 // Color pointers
-@header-font-color: @gold;
-@main-font-color: @darkcyan;
-@main-border-color: @lightgrayishblue;
-@border-color: @darkcyan;
+@header-font-color: @electricindigo;
+@border-font-color: @outrageousorange;
 @background-color: @lighttan;
-@font-color: @verydarkblue;
+
 
 
 
 // Color Vars
-@lightgrayishblue: #deeef4;
-@darkcyan: #508991;
-@gold: #f9b514;
-@verydarkblue: #172a3a;
+@electricindigo: #E67A07;
+@outrageousorange: #FF5733;
 @lighttan: #d2b48c;
