--- a/less/about-page.less
+++ b/less/about-page.less
@@ -1,21 +1,35 @@
 body {
-    background-color: @header-font-color;
+    background-color: @background-color;
 
     .navigation {
         display: flex;
         justify-content: space-between;
+        padding-top: 2%;
 
         .name-logo {
-            width: 400px;
+            width: 200px;
 
             @media (max-width: 500px) {
-                width: 300px;
+                width: 150px;
+            }
+        }
+
+        h1 {
+            width: 40%;
+            text-align: center;
+        }
+
+        .title-text {
+
+            @media (max-width: 500px) {
+                font-size: 2.3rem;
             }
         }
 
         a {
             text-decoration: none;
             color: @background-color;
+            padding: 2%;
         }
 
         .about {
@@ -25,14 +39,23 @@ body {
             font-size: 1.8rem;
             text-decoration: none;
 
+            @media (max-width: 500px) {
+                flex-direction: column;
+                justify-content: start;
+                text-align: center;
+                height: 100px;
+
+            }
+
             a {
                 padding: 5px;
+
             }
         }
     }
 
     .main-content {
-        padding-top: 5%;
+        padding-top: 8%;
         display: flex;
         flex-direction: column;
 
@@ -51,13 +74,17 @@ body {
             flex-direction: column;
             text-align: center;
 
+            @media (max-width: 500px) {
+                padding-bottom: 5%;
+            }
+
             .members-pl {
                 width: 50%;
                 justify-content: center;
 
                 h1 {
                     @media (max-width: 500px) {
-                        color: @main-font-color;
+                        color: @border-font-color;
                     }
                 }
 
@@ -76,19 +103,29 @@ body {
             text-align: center;
             height: 700px;
 
+            @media (max-width: 500px) {
+                padding: 5% 0;
+            }
+
             h1 {
                 width: 100%;
 
                 @media (max-width: 500px) {
-                    color: @main-font-color;
-                }
+                    color: @border-font-color;
                 }
             }
+        }
 
             .members-wrII {
                 width: 47%;
                 height: 500px;
                 justify-content: center;
+
+                h1 {
+                    @media (max-width: 500px) {
+                        padding-top: 5%;
+                    }
+                }
 
                 p {
                     margin-top: 2%;
@@ -109,11 +146,17 @@ body {
             text-align: center;
             height: 700px;
 
+            @media (max-width: 500px) {
+                flex-direction: column;
+                height: 1380px;
+                justify-content: start;
+            }
+
             h1 {
                 width: 100%;
 
                 @media (max-width: 500px) {
-                    color: @main-font-color;
+                    color: @border-font-color;
                     margin-top: 5%;
                 }
             }
@@ -122,6 +165,10 @@ body {
                 width: 47%;
                 height: 500px;
                 justify-content: center;
+
+                @media (max-width: 500px) {
+                    height: 650px;
+                }
 
                 p {
                     margin-top: 2%;
@@ -138,13 +185,12 @@ body {
             text-align: center;
             height: 700px;
 
+            @media (max-width: 500px) {
+                align-items: start;
+            }
+
             h1 {
                 width: 100%;
-
-                @media (max-width: 500px) {
-                    color: @main-font-color;
-                    margin-top: 20%;
-                }
             }
 
             .members-web {
