--- a/less/global.less
+++ b/less/global.less
@@ -9,11 +9,10 @@ html {
 
 html, body {
     font-family: 'Righteous', sans-serif;
-    color: @font-color;
-    // font-size: 1.6rem;
+    color: @border-font-color;
 }
 
-h1, h2 {
+h1, h2, h3 {
     font-family: 'Quicksand' sans-serif;
     color: @header-font-color;
 }
@@ -27,7 +26,7 @@ h2 {
 }
 
 h3{
-    font-size: 1.8rem;
+    font-size: 2.3rem;
 }
 
 p {
@@ -35,7 +34,10 @@ p {
 }
 
 .container {
-    min-width: 500px;
     width: 100%;
     margin: 0 auto;
+
+    @media (max-width: 500px) {
+        max-width: 450px;
+    }
 }
