adjusted text color

--- a/less/global.less
+++ b/less/global.less
@@ -9,7 +9,7 @@ html {
 
 html, body {
     font-family: 'Righteous', sans-serif;
-    color: @border-font-color;
+    // color: @border-font-color;
 }
 
 h1, h2, h3 {
