--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @header-font-color: @electricindigo;
 @border-font-color: @outrageousorange;
 @background-color: @lighttan;
+@bg-color: @lightgreen;
 
 
 
@@ -12,3 +13,4 @@
 @electricindigo: #E67A07;
 @outrageousorange: #FF5733;
 @lighttan: #d2b48c;
+@lightgreen: #DAF7A6;
