--- a/less/about-page.less
+++ b/less/about-page.less
@@ -96,10 +96,8 @@ body {
         }
 
         .secondmembers {
-            display: flex;
-            justify-content: center;
+            .intro-alignment;
             flex-wrap: wrap;
-            align-items: center;
             text-align: center;
             height: 700px;
 
@@ -139,8 +137,7 @@ body {
         }
 
         .thirdmembers {
-            display: flex;
-            justify-content: center;
+            .intro-alignment;
             flex-wrap: wrap;
             align-items: center;
             text-align: center;
@@ -178,10 +175,8 @@ body {
         }
 
         .bottommembers {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            align-items: center;
+            .intro-alignment;
+            .section-alignment;
             text-align: center;
             height: 700px;
 
@@ -207,14 +202,13 @@ body {
     }
 
     footer {
-        display: flex;
-        justify-content: center;
+        .intro-alignment;
 
         a {
             font-size: 1.6rem;
             padding: 15px;
             text-decoration: none;
-            color: @background-color;
+            color: @header-font-color;
 
             @media (max-width: 500px) {
                 font-size: 1.2rem;
