--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,10 @@
 body {
 
     .container {
-        background-color: #DAF7A6;
+        background-color: @bg-color;
 
         .head {
-            background-color: #DAF7A6;
+            background-color: @bg-color;
             display: flex;
             padding: 2% 0;
 
@@ -86,14 +86,13 @@ body {
 
         .about-us {
             .section-alignment;
-            background-color: @lighttan;
+            background-color: @background-color;
             width: 100%;
             margin: 0;
             padding-bottom: 4%;
 
             h2 {
-                display: flex;
-                justify-content: center;
+                .intro-alignment;
                 width: 100%;
                 padding: 2%;
             }
@@ -106,10 +105,9 @@ body {
         }
 
         .mid-content {
-            background-color: #DAF7A6;
-            display: flex;
+            background-color: @bg-color;
             flex-direction: column;
-            align-items: center;
+            .intro-alignment;
             width: 100%;
             margin: 0;
             padding: 5% 0;
@@ -137,7 +135,7 @@ body {
                 }
 
                 .middle-content {
-                    background-color: @lighttan;
+                    background-color: @background-color;
                     display: flex;
                     align-content: center;
                     flex-direction: column;
@@ -165,7 +163,7 @@ body {
         }
 
         .bottom-content {
-            background-color: @lighttan;
+            background-color: @background-color;
             .intro-alignment;
             flex-direction: column;
             width: 100%;
